tests/burghard/fail/ifoption_no_endoption.wsa
    push 1
ifoption x
    push 2
